H3 spacing fixes.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -673,7 +673,7 @@ figure {
 
 .main-content h2 {
     margin-top: 1em;
-    margin-bottom: 1em;
+    margin-bottom: 0.4em;
 }
 
 #work, #writing {
